# tsp-analytics

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  SUMMARY.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
docs/: ANALYTICS.md  ARCHITECTURE.md  CONFIGURATION.md  CONTRIBUTING.md  CURRENT_PRICES.md  DASHBOARDS.md  DATA_SOURCES.md  DEVELOPMENT.md  EXAMPLES.md  GETTING_STARTED.md  PORTFOLIO.md  README.md  REFERENCE.md  TESTING.md  TROUBLESHOOTING.md  USAGE.md  VISUALIZATION.md
docs/sphinx/: analytics.md  api.rst  conf.py  development.md  index.rst  portfolio.md  pydoc.md  troubleshooting.md  usage.md
src/tsp/: __init__.py  allocation.py  charts.py  data_io.py  data_providers.py  fund_metadata.py  fund_resolution.py  funds.py  normalization.py  tsp.py  validation.py
src/tsp/analytics/: __init__.py  correlations.py  (+7 more)
tests/: __init__.py  conftest.py  helpers.py  test_charts.py  test_data_io.py  test_data_providers.py  test_data_quality.py  test_fund_metadata_helpers.py  test_fund_resolution.py  test_normalization.py  test_tsp_allocations.py  test_tsp_charts_validation.py  test_tsp_loading.py  test_tsp_portfolio.py  test_tsp_pricing.py  test_tsp_returns.py  test_validation_additional.py  test_validation_helpers.py
tests/analytics/: test_correlation.py  test_current_price_alerts_and_summary.py  test_current_price_changes.py  test_metadata_and_summary.py  test_moving_averages.py  test_recency_and_overview.py  test_recent_changes_and_returns.py  test_recent_prices.py  test_regime_and_stress.py  test_reports.py
